--- a/ebay_dapp/Ebay/app/src/index.html
+++ b/ebay_dapp/Ebay/app/src/index.html
@@ -1,37 +1,44 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>MetaCoin | Truffle Webpack Demo w/ Frontend</title>
-  </head>
-  <style>
-    input {
-      display: block;
-      margin-bottom: 12px;
-    }
-  </style>
-  <body>
-    <h1>MetaCoin — Example Truffle Dapp</h1>
-    <p>You have <strong class="balance">loading...</strong> META</p>
 
-    <h1>Send MetaCoin</h1>
+<head>
+  <title>去中心化商品拍卖</title>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' rel='stylesheet' type='text/css'>
+  <link href='./stylesheets/index.css' rel='stylesheet' type='text/css'>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="./index.js"></script>
+</head>
 
-    <label for="amount">Amount:</label>
-    <input type="text" id="amount" placeholder="e.g. 95" />
+<body>
+  <div class="container-fluid">
+    <h1>商品拍卖</h1>
+    <div>所有商品: <span id="total-products"></span></div> <a href="list-item.html" class="btn btn-primary">List
+      Item</a>
+    <div class="row">
+      <div class="col-sm-2">
+        <h2>类别</h2>
+        <div id="categories">
+        </div>
+      </div>
+      <div class="col-sm-10">
+        <div class="row">
+          <h2 class="text-center">Products To Buy</h2>
+          <div class="row">
+            <div class="row" id="product-list">
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <h2 class="text-center">Products In Reveal Stage</h2>
+          <div class="row">
+            <div class="row" id="product-reveal-list">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
 
-    <label for="receiver">To address:</label>
-    <input
-      type="text"
-      id="receiver"
-      placeholder="e.g. 0x93e66d9baea28c17d9fc393b53e3fbdd76899dae"
-    />
-
-    <button onclick="App.sendCoin()">Send MetaCoin</button>
-
-    <p id="status"></p>
-    <p>
-      <strong>Hint:</strong> open the browser developer console to view any
-      errors and warnings.
-    </p>
-    <script src="index.js"></script>
-  </body>
 </html>
